2011-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Fix compilation dependencies of unit tests in Scribo.

	* tests/unit_test/Makefile.am (COND_TESTS):
	Add cond_tests_magickxx, cond_tests_magickxx_qt and
	cond_tests_magickxx_tesseract.
	Remove cond_tests_qt_tesseract_tiff.
	* tests/unit_test/cond_tests_magickxx,
	* tests/unit_test/cond_tests_magickxx_qt,
	* tests/unit_test/cond_tests_magickxx_tesseract:
	New.
	* tests/unit_test/cond_tests_qt_tesseract_tiff: Remove (empty)
	file.
	* tests/unit_test/cond_tests_magickxx_tesseract_tiff: Add
	scribo/toolchain/content_in_doc.hh.
	* tests/unit_test/cond_tests_qt: Remove
	scribo/io/xml/internal/full_xml_visitor.hh and
	scribo/io/xml/load.hh.
	* tests/unit_test/cond_tests_tesseract_tiff: Remove.
	scribo/toolchain/content_in_doc.hh.
	* tests/unit_test/cond_tests_magickxx_qt_tesseract_tiff:
	Remove empty line.
	* tests/unit_test/unit-tests.mk: Regen.

2011-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Fix compilation dependencies in Scribo.

	* src/contest/DAE-2011/Makefile.am
	(content_in_hdoc_dae_CPPFLAGS, content_in_doc_dae_CPPFLAGS)
	* src/contest/hdlac-2011/Makefile.am
	(content_in_hdoc_hdlac_CPPFLAGS):
	Add $(MAGICKXX_CPPFLAGS).
	* src/debug/Makefile.am
	(noinst_PROGRAMS): Move show_lines_boldness...
	(noinst_PROGRAMS) [HAVE_MAGICKXX, HAVE_TESSERACT]: ...here.
	(show_lines_boldness_SOURCES): Remove.
	(show_lines_boldness_SOURCES)
	(show_lines_boldness_CPPFLAGS)
	(show_lines_boldness_LDFLAGS)
	[HAVE_MAGICKXX, HAVE_TESSERACT]: New.
	(show_text_lines_CPPFLAGS)
	(show_text_lines_wo_seps_CPPFLAGS)
	[HAVE_MAGICKXX, HAVE_QT, HAVE_TESSERACT]:
	Add $(TESSERACT_CPPFLAGS).

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/toolchain/internal/toolchain_functor.hh: Add a missing
	inline.

2011-03-29  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/toolchain/internal/toolchain_functor.hh: Fix a warning
	with GCC 4.5.

2011-09-07  Guillaume Lazzara  <z@lrde.epita.fr>
