@@ -27,12 +27,11 @@ if HAVE_MAGICKXX
 noinst_PROGRAMS += content_in_hdoc_hdlac
 
 content_in_hdoc_hdlac_SOURCES = content_in_hdoc_hdlac.cc
-content_in_hdoc_hdlac_CPPFLAGS = $(AM_CPPFLAGS) \
-				 $(MAGICKXX_CPPFLAGS) \
-				 $(TESSERACT_CPPFLAGS) \
-				 -I$(top_builddir)
-content_in_hdoc_hdlac_LDFLAGS  = $(AM_LDFLAGS) \
-				 -lpthread \
-				 $(MAGICKXX_LDFLAGS)
+content_in_hdoc_hdlac_CPPFLAGS = $(AM_CPPFLAGS) 	\
+				 $(MAGICKXX_CPPFLAGS) 	\
+	  		    	 -I$(top_builddir)
+content_in_hdoc_hdlac_LDFLAGS  = $(AM_LDFLAGS) 		\
+		      	       	 -lpthread 		\
+			   	 $(MAGICKXX_LDFLAGS)
 
 endif HAVE_MAGICKXX
